# fontforge

./: .coverage  .env.example  .gitignore  Dockerfile  QUICKSTART.md  README.md  alembic.ini  conftest.py  coverage.xml  docker-compose.prod.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements-docs.txt  setup.cfg
.github/: issues_backlog.csv
aifont/: __init__.py  __main__.py  db.py  pyproject.toml  requirements.txt
aifont/agents/: __init__.py  design_agent.py  export_agent.py  metrics_agent.py  orchestrator.py  qa_agent.py  style_agent.py
aifont/aifont.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
aifont/api/: Dockerfile  __init__.py  app.py  auth.py  config.py  database.py  dependencies.py  main.py  models.py  requirements.txt  routes.py  schemas.py
aifont/api/routers/: __init__.py  agents.py  auth.py  fonts.py  generation.py
aifont/api/routes/: __init__.py  agents.py  fonts.py
aifont/api/tasks/: __init__.py  font_tasks.py
aifont/auth/: __init__.py  api_keys.py  dependencies.py  jwt.py  models.py  oauth2.py  quota.py  router.py  schemas.py  security.py
aifont/core/: __init__.py  analyzer.py  contour.py  export.py  font.py  glyph.py  metrics.py  svg_parser.py  variable.py
aifont/db/: __init__.py  database.py  models.py  seeds.py
aifont/docs/: backup_restore.md
aifont/migrations/: env.py
aifont/migrations/versions/: 0001_initial_schema.py
aifont/monitoring/: __init__.py  logging.py  metrics.py  middleware.py  requirements.txt  sentry.py
aifont/tests/: __init__.py  test_agents.py  test_aifont.py  test_analyzer.py  test_core_extra.py  test_db_integration.py  test_glyph.py  test_security.py  test_variable_svg.py
aifont/utils/: __init__.py  font_analyzer.py  svg_parser.py
aifont/web/: index.html  package-lock.json  package.json  tailwind.config.js
aifont/web/src/: App.tsx  index.css
aifont/web/src/api/: client.ts  types.ts
aifont/web/src/components/common/: Button.tsx  LoadingSpinner.tsx  Modal.tsx
aifont/web/src/components/dashboard/: NewProjectModal.tsx  ProjectCard.tsx
aifont/web/src/components/export/: ExportHistory.tsx  ExportPanel.tsx
aifont/web/src/components/layout/: AppLayout.tsx  Header.tsx  Sidebar.tsx
aifont/web/src/components/preview/: FontPreview.tsx  PreviewControls.tsx
aifont/web/src/components/prompt/: PromptHistory.tsx  PromptInput.tsx  PromptResult.tsx
aifont/web/src/components/studio/: GlyphEditor.tsx  GlyphList.tsx  PropertiesPanel.tsx  Toolbar.tsx
aifont/web/src/hooks/: useAgent.ts  useFont.ts  useProject.ts
aifont/web/src/pages/: Dashboard.tsx  ExportPage.tsx  NotFound.tsx  PreviewPage.tsx  PromptPage.tsx  Studio.tsx
aifont/web/src/store/: projectStore.tsx
aifont/web/tests/e2e/: dashboard.spec.ts  export.spec.ts  preview.spec.ts  prompt.spec.ts  studio.spec.ts
aifont/worker/: Dockerfile  __init__.py  celery_app.py  tasks.py
docs/: runbook.md
frontend/: Dockerfile  nginx.conf
monitoring/: docker-compose.yml
requirements/: api.txt  base.txt  worker.txt
tests/: test_aifont_api.py  test_aifont_contour.py  test_aifont_export.py  (+8 more)
(+81 files in other folders)
