[metadata]
name = aifont
version = 0.1.0
description = AIFont — Python SDK and AI agent layer built on top of FontForge
author = AIFont Contributors

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    fastapi
    pydantic

[options.packages.find]
include =
    aifont
    aifont.*
