[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aifont"
version = "0.1.0"
description = "AI-powered font SDK and agent layer built on FontForge"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "AIFont Contributors" }]
keywords = ["font", "ai", "typography", "fontforge", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Fonts",
]
dependencies = [
    "fonttools>=4.43.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.6.0",
]
ai = [
    "litellm>=1.30.0",
]
dev = [
    "pytest>=8.1.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "sqlalchemy>=2.0.0",
    "bcrypt>=4.0.0",
]

[project.scripts]
aifont = "aifont.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["aifont*"]

# ---------------------------------------------------------------------------
# Ruff — linter + formatter
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py310"
line-length = 99
src = ["."]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",   # line length handled by formatter
    "B008",   # do not perform function calls in default args (FastAPI pattern)
    "N999",   # invalid module name (we allow aifont)
]

[tool.ruff.lint.per-file-ignores]
"aifont/tests/*" = ["S101"]   # allow assert in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["aifont/tests"]
addopts = "--tb=short -q"

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------

[tool.coverage.run]
source = ["aifont"]
omit = ["aifont/tests/*", "aifont/__main__.py"]

[tool.coverage.report]
show_missing = true
fail_under = 60
